fix(Dataviz): Remove useless z-index on zoom buttons

--- a/packages/dataviz/src/components/GeoChart/GeoChart.scss
+++ b/packages/dataviz/src/components/GeoChart/GeoChart.scss
@@ -30,7 +30,6 @@
 		position: absolute;
 		bottom: 15px;
 		left: 10px;
-		z-index: 3;
 	}
 
 	&__zoom-button {
